fixed the main button on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -277,6 +277,7 @@ p {
 		padding-bottom: 20px;
 
 		.main-btn {
+			
 			background: rgb(51, 50, 50);
 			padding: 2% 3%;
 			color: beige;
@@ -284,9 +285,15 @@ p {
 			font-size: 1.5rem;
 			margin-top: 2%;
 			outline: none;
+		
+			@media @mobile {
+				width: 100%;
+			}
 		}
 	}
 }
+
+
 
 //MAIN SECTION
 
@@ -331,17 +338,18 @@ p {
 		ul li {
 			font-size: 1.45rem;
 			padding: 12px 0px 10px 10px;
-			border: .bordered;
+			.bordered();
 		}
 	}
 }
+
 
 table {
 	width: 100%;
 	margin: 2% 0;
 
 	thead {
-		border: .bordered;
+		.bordered();
 		line-height: 3.5rem;
 
 		tr {
